src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Allow_Deletion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CodeScan_Describe_Error__c</fullName>
        <label>Code Scan Describe Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeScan_Status__c</fullName>
        <label>Code Scan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_On_Heroku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created On Heroku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Portal_User_Flag_Delivery__c</fullName>
        <formula>AND(
  NOT(ISBLANK(Delivery_Owner__c)),
  Delivery_Owner__c = $User.Id
)</formula>
        <label>Current Portal User Flag - Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Portal_User_Flag_Functional__c</fullName>
        <formula>AND(
  NOT(ISBLANK(Functional_Owner__c)),
  Functional_Owner__c = $User.Id
)</formula>
        <label>Current Portal User Flag - Functional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_on_Heroku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete on Heroku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Epic</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Story and the Epic must be associated to the same Project</errorMessage>
            <filterItems>
                <field>Epic__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Epic__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Variance__c</fullName>
        <formula>Level_of_Effort__c - Total_Hours_Logged__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <globalPicklist>Priority</globalPicklist>
        <label>Priority</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>QA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stories3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scan_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scan Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sprint</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Story and the Sprint must be associated to the same Project</errorMessage>
            <filterItems>
                <field>Sprint__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <globalPicklist>Story_Status</globalPicklist>
        <label>Status</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Name__c</fullName>
        <label>Story Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Design_Notes__c</fullName>
        <label>Technical Design Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Scenarios__c</fullName>
        <label>Test Scenarios</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Logged__c</fullName>
        <label>Total Hours Logged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Sprint__c</columns>
        <columns>Epic__c</columns>
        <columns>Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Level_of_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Draft_Backlog</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Epic__c</columns>
        <columns>Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Level_of_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Backlog</value>
        </filters>
        <label>Draft / Backlog</label>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Epic__c</columns>
        <columns>Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Level_of_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled,Draft,Backlog</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>My_Stories_Delivery_Owner</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Epic__c</columns>
        <columns>Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Level_of_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Portal_User_Flag_Delivery__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Stories - Delivery Owner</label>
    </listViews>
    <listViews>
        <fullName>My_Stories_Functional_Owner</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Epic__c</columns>
        <columns>Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Level_of_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Portal_User_Flag_Functional__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Stories - Functional Owner</label>
    </listViews>
    <listViews>
        <fullName>Release_Management_Community_UIs</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Epic__c</columns>
        <columns>Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Level_of_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Epic__c</field>
            <operation>equals</operation>
            <value>E-0054</value>
        </filters>
        <filters>
            <field>Story_Name__c</field>
            <operation>contains</operation>
            <value>from the Community - Version 1,from the Community</value>
        </filters>
        <label>Release Management Community UIs</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X10K_Stories_Current_Sprint</fullName>
        <columns>NAME</columns>
        <columns>Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Sprint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>contains</operation>
            <value>10K Internal App Dev - 2017-01-27</value>
        </filters>
        <label>10K Stories - Current Sprint</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>